--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,8 +49,8 @@
 .nav-text-active {
   color:orange;
 }
-.nav-text:hover {
-  border-bottom: 2px solid orange
+.nav-text:hover, .nav-text-full:hover {
+  border-bottom: 3px solid orange
 }
 
 /*  toggle  styles*/
