--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 27px;
+  color: var(--dark-primary-color);
 }
 .para-small-screen {
   font-size: 16px;
@@ -124,6 +125,7 @@ input:checked + label svg.moon {
 .btn {
   background-color: var(--foreground-color);
   height: 54px;
+  /* border-end-end-radius: 0; */
   border-radius: 100px;
   font-weight: 700;
   border-radius: 100px;
