did some adjustment on the code

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,10 +53,9 @@
 }
 .nav-text-active {
   color: #8F00FF;
+  padding-bottom: 5px;
 }
-.nav-text-active:hover {
-  border-bottom: 2px solid #00FDEE;
-}
+
 .nav-text:hover, .nav-text-full:hover {
   border-bottom: 2px solid #8F00FE;
   color: #00FDEE
