--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -180,6 +180,28 @@ input:checked + label svg.moon {
   padding: 12px 0;
   border-bottom: 1px solid #484848;
 }
+
+.loader {
+  width: 20px;
+  height: 20px;
+  border: 5px solid rgb(227, 21, 21);
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  }
+
+  @keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+   }
+  } 
 /* 
 @media (prefers-color-scheme: dark) {
   :root {
